<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppKeep</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Homepage string names -->
    <string name="database">Database</string>
    <string name="notifications">Set Reminder</string>
    <string name="timeline">Timeline</string>
    <string name="about">About</string>
    
    <!-- Alarms / Notification Strings -->
    <string name="settings">Settings</string>
    <string name="received">Alarm Received!</string>
    <string name="invalid">Invalid Date/Time</string>
    <string name="appkeep">AppKeep</string>
    <string name="set">Set Alarm</string>
    
    <!-- Strings for DATABASE INPUT screen -->
    <!-- Setting up background color and strings for text hints and text box titles that let users know what data to enter -->
    
    <color name="bground_color">#8bbaf3</color>
    <color name="editText_bground">#D3E2F9</color>
    <string name="serial_num">Serial number</string>
    <string name="serial_num_hint">exampleXX111</string>
    <string name="equip_name">Equipment name</string>
    <string name="equip_location">Location</string>
    <string name="date_last">Last service</string>
    <string name="date_due">Service due</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="query">Query</string>
    <string name="row_num">type row number</string>
    
    <string name="view_db">View Database</string>
    <string name="num">#</string>
    <string name="edit_entry">Edit</string>
    <string name="delete_entry">Delete</string>
    
    
    <!--  Manifest String names -->
    <string name="database_homescreen">Database Homescreen</string>
    <string name="database_view">Database View</string>
    
    <!--  DatePicker String names -->
     <string name="set_date">Set Date</string>
     <string name="set_date_hint">Set Date</string>
     <string name="set_date_last_service">Set Date of Last Service</string>
     
     <!-- Strings for ABOUT screen -->
    
    <string name="info">AppKeep v.1.0</string>
    <string name="Mel">Melissa Rizzi</string>
    <string name="Wayne">Wayne Dunne</string>
    <string name="Ciaran">Ciaran Twomey</string>
    <string name="Ronan">Ronan Wills</string>
    
    <!--  Button strings to input and edit database entries. Colors used: 
    #FF9147 - pale gold
    #FF8533 - dark gold
    A34719 - brown-->
    <string name="create_entry">Create entry</string>
    <string name="view_database">View Database</string>
    <color name="bn_color">#FF9147</color>
    <color name="bn_color2">#FFC985</color>
    <color name="bn_color3">#FF0000</color>
    <color name="bn_color4">#FF3333</color>
    <color name="bn_color5">#FFC985</color>
    <color name="bn_color6">#A34719</color>
    <color name="bn_color7">#99FF66</color>
    
    
    

</resources>
