<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bground_color" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    
 
 <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:background="@drawable/homeimage"
        android:layout_marginBottom="30dp" />
        
  
    <Button
        android:id="@+id/button1"
        style="@style/buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/database"
        android:layout_marginBottom="30dp" />
        
 
    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeline"
        android:background="@drawable/button_style"
        style="@style/buttonstyle"
        android:layout_marginBottom="30dp" />
    
 
    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:text="@string/notifications"
        style="@style/buttonstyle"
        android:layout_marginBottom="30dp" />
    
   
   
    
</LinearLayout>
